# Quizit

./: package-lock.json
Backend/: .gitignore  customException.ts  index.ts  logger.ts  package-lock.json  package.json
Backend/@types/: express.d.ts
Backend/controller/: test.ts  user.ts
Backend/controller/interface/: auth.ts  test.ts
Backend/drizzle/: schema.ts
Backend/drizzle/migrations/: 0000_sweet_shiva.sql  0001_lush_franklin_richards.sql  0002_massive_stardust.sql  0003_natural_lorna_dane.sql  0003_silly_synch.sql  0004_chief_jane_foster.sql  0004_right_lester.sql
Backend/middleware/: auth.ts  check.ts  injector.ts
Backend/routes/: test.ts
Backend/utils/: config.ts  getMarksFromAI.ts  mailer.ts  mnemonic.ts
Backend/validators/: auth.ts  test.ts
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  Loading.jsx  index.css  main.jsx
Frontend/src/components/: Assessment.jsx  CreateTest.jsx  EvaluateSubmission.jsx  Login.jsx  ProctoredTest.jsx  Profile.jsx  QuestionNavigation.jsx  Register.jsx  Result.jsx  ResultAnalysis.jsx  ResultAnalysisTest.jsx  SideBar.jsx  SubmissionAnalysis.jsx  Test.jsx  Timer.jsx
Frontend/src/css/: AddQuestion.module.css  Assessment.module.css  AssessmentCard.module.css  ConfirmPublish.module.css  InstructionModal.module.css  Login.module.css  Options.module.css  Profile.module.css  QuestionNavigation.module.css  Register.module.css  Result.module.css  ResultAnalysis.module.css  ResultCard.module.css  SelectRole.module.css  Settings.module.css  Test.module.css  (+6 more)
ai-engine/: app.py  pyproject.toml
(+22 files in other folders)
