[tool.poetry]
name = "ai-engine"
version = "0.1.0"
description = ""
authors = ["vinit agarwal <vinitagarwal.garg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.55.0"
fastapi = "^0.115.5"
sentence-transformers = "^3.3.1"
rouge-score = "0.1.2"
scikit-learn = "^1.5.2"
python-dotenv = "^1.0.1"
uvicorn = {extras = ["standard"], version = "^0.32.1"}

[tool.poetry.scripts]
start = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
